--- a/projecte/ProjecteAG.html
+++ b/projecte/ProjecteAG.html
@@ -1,15 +1,16 @@
 <!DOCTYPE html>
 <html>
-    //Gerard uwu
     <head>
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <script src=".\node_modules\bootstrap\dist\js\bootstrap.bundle.min.js"></script>
-        <link rel="stylesheet" href="ProjecteAG.css" type="text/css">
+        <link rel="stylesheet" href="ProjecteAGcss.css" type="text/css">
     </head>
 
     <body>
-
+        <header>
+          <h1>Adrià i Gerard</h1>
+        </header>
     </body>
 </html>
