--- a/projecte/ProjecteAG.html
+++ b/projecte/ProjecteAG.html
@@ -6,11 +6,32 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <script src=".\node_modules\bootstrap\dist\js\bootstrap.bundle.min.js"></script>
         <link rel="stylesheet" href="ProjecteAGcss.css" type="text/css">
+        <link rel="stylesheet" href="ProjecteAG.css" type="text/css">
     </head>
 
     <body>
-        <header>
+        <header class="bg-dark">
           <h1>Adrià i Gerard</h1>
         </header>
+
+
+        <nav class="navbar navbar-expand-sm bg-light">
+          <div class="container-fluid">
+            <ul class="navbar-nav">
+              <li class="nav-item">
+                <a class="nav-link" href="#">Toyota</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#">Nissan</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#">Mazda</a>
+              </li>
+            </ul>
+          </div>
+        </nav>
+
+        
+
     </body>
 </html>
