--- a/projecte/ProjecteAG.html
+++ b/projecte/ProjecteAG.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html>
-    //Gerard uwu
     <head>
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -10,6 +9,8 @@
     </head>
 
     <body>
-
+        <div class="cMainContent">
+            <p>Hola que tal puta</p>
+        </div>
     </body>
 </html>
