--- a/projecte/ProjecteAG.html
+++ b/projecte/ProjecteAG.html
@@ -10,7 +10,7 @@
     </head>
 
     <body>
-        <header class="bg-dark">
+        <header class="col col-md-12 bg-dark">
           <h1>Adrià i Gerard</h1>
         </header>
 
