--- a/projecte/ProjecteAG.html
+++ b/projecte/ProjecteAG.html
@@ -19,13 +19,13 @@
           <div class="container-fluid">
             <ul class="navbar-nav">
               <li class="nav-item">
-                <a class="nav-link" href="#">Toyota</a>
+                <a class="nav-link" href="Pagina1.html">Toyota</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">Nissan</a>
+                <a class="nav-link" href="Pagina2.html">Nissan</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">Mazda</a>
+                <a class="nav-link" href="Pagina3.html">Mazda</a>
               </li>
             </ul>
           </div>
