--- a/projecte/ProjecteAG.html
+++ b/projecte/ProjecteAG.html
@@ -22,13 +22,16 @@
                 <a class="nav-link" href="Pagina1.html">Toyota</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="Pagina2.html">Nissan</a>
+                <a class="nav-link" href="#">Nissan</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="Pagina3.html">Mazda</a>
+                <a class="nav-link" href="#">Mazda</a>
               </li>
             </ul>
           </div>
-        </nav>  
+        </nav>
+
+        
+
     </body>
 </html>
