--- a/projecte/ProjecteAG.html
+++ b/projecte/ProjecteAG.html
@@ -31,7 +31,8 @@
           </div>
         </nav>
 
-        
-
+        <footer class="col col-md-12 bg-dark">
+          <p>Adrià i Gerard</p>
+        </footer>
     </body>
 </html>
