--- a/projecte/ProjecteAG.html
+++ b/projecte/ProjecteAG.html
@@ -30,5 +30,10 @@
             </ul>
           </div>
         </nav>  
+
+        <div class="row">
+            <ul class="col offset-1 col-md-4"></ul>
+              <li class="Maincontent"></li>
+        </div>
     </body>
 </html>
