--- a/projecte/ProjecteAG.html
+++ b/projecte/ProjecteAG.html
@@ -30,6 +30,11 @@
             </ul>
           </div>
         </nav>
+        
+        <div class="row">
+          <ul class="col offset-1 col-md-4"></ul>
+            <li class="Maincontent"></li>
+      </div>
 
         <footer class="col col-md-12 bg-dark">
           <p>Adrià i Gerard</p>
