--- a/projecte/ProjecteAG.html
+++ b/projecte/ProjecteAG.html
@@ -11,7 +11,7 @@
 
     <body>
         <header class="col col-md-12 bg-dark">
-          <h1>Adrià i Gerard</h1>
+          <h1>Cotxes</h1>
         </header>
 
 
