--- a/projecte/ProjecteAG.html
+++ b/projecte/ProjecteAG.html
@@ -32,8 +32,7 @@
         </nav>
         
         <div class="row">
-          <ul class="col offset-1 col-md-4"></ul>
-            <li class="Maincontent"></li>
+          <div class="col offset-1 col-md-4 border ">La generación Toyota AE86 del Toyota Corolla Levin y Toyota Sprinter Trueno, es un pequeño cupé ligero o hatchback introducido por Toyota en 1983 como parte de la quinta generación del Toyota Corolla. También es conocido como "Hachi-Roku (ハチロク?)", por 8 y 6 en japonés) gracias al Manga / Anime Initial D. Para el propósito de la brevedad, el código privilegiado del chasis "AE86" muestra el modelo de tracción trasera (RWD) de 1600 cc de la gama. En el clásico código de Toyota, la "A" representa el motor que llegó en el coche de la serie 4A-GE, mientras que la "E" representa el Corolla, "8" representa la quinta generación (serie E80) y "6" representa la variación dentro de esta generación, ya que algunos han pensado que el "86" representaba el año 1986 como su año de fabricación.aevbiae vierva esfvWHFWE,MF iwnfWJFBWEFVWWEJVUBVMEAVBEARFMN3EUFQ3M VIU3  HFmefhWFNjiwefwef ñuroer mvuñ,m ÑFHER FMERJFLIJ</div>
       </div>
 
         <footer class="col col-md-12 bg-dark">
