--- a/projecte/ProjecteAG.html
+++ b/projecte/ProjecteAG.html
@@ -11,7 +11,7 @@
     </head>
 
     <body>
-        <header class="col col-md-12 bg-dark">
+        <header class="col col-md-12">
           <h1>Cotxes</h1>
         </header>
 
@@ -45,7 +45,8 @@
             amb motors elèctrics que donen més autonomia i baix consum. Les rodes davanteres dels automòbils poden moure's cap a ambdós costats per realitzar girs i prendre els revolts. ​ 
           <p></p>
           La teoria més acceptada és que ve de l'hongarès kocsi, que és el gentilici del poble de Kocs, on es fabricaven carruatges famosos en tot el país. Aquest en seria l'ètim primer, que passaria al francès, a l'espanyol, i d'aquesta llengua al català, amb la particularitat que en el català el mot cotxe ha passat a designar amb el temps un transport motoritzat. En català també es pot dir cotxe de línia a un autobús.
-          
+          <p></p>
+          El motor, elèctric o tèrmic, subministren un parell sobre el seu eix de sortida. Aquest parell ha de ser transmès a les rodes per permetre el desplaçament de l'automòbil. Els diferents òrgans de transmissió - l'embragatge, la caixa de canvi, els ponts i el diferencial entre d'altres - asseguren aquesta funció. 
           </div>
 
 
