--- a/projecte/Pagina1.html
+++ b/projecte/Pagina1.html
@@ -15,6 +15,22 @@
         <h1>Toyota</h1>
     </header>
 
+    <nav class="navbar navbar-expand-sm bg-light">
+        <div class="container-fluid">
+          <ul class="navbar-nav">
+            <li class="nav-item">
+              <a class="nav-link" href="ProjecteAG.html">Home</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="Pagina2.html">Nissan</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="Pagina3.html">Mazda</a>
+            </li>
+          </ul>
+        </div>
+      </nav>
+
     <div class="row">
         <ul class="col offset-1 col-md-4"></ul>
     </div>
