--- a/projecte/Pagina2.html
+++ b/projecte/Pagina2.html
@@ -16,6 +16,23 @@
         <h1>Nissan</h1>
     </header>
 
+    <nav class="navbar navbar-expand-sm bg-light">
+        <div class="container-fluid">
+            <ul class="navbar-nav">
+                <li class="nav-item">
+                <li class="nav-item">
+                    <a class="nav-link" href="ProjecteAG.html">Home</a>
+                </li>
+                <a class="nav-link" href="Pagina1.html">Toyota</a>
+                </li>
+
+                <li class="nav-item">
+                    <a class="nav-link" href="Pagina3.html">Mazda</a>
+                </li>
+            </ul>
+        </div>
+    </nav>
+
     <div class="row">
         <ul class="col offset-1 col-md-4"></ul>
     </div>
