--- a/projecte/Pagina2.html
+++ b/projecte/Pagina2.html
@@ -13,7 +13,7 @@
 <body>
 
     <header class="col col-md-12">
-        <h1>Nissan</h1>
+        <h1>Nissan Skyline r34</h1>
     </header>
 
     <nav class="navbar navbar-expand-sm bg-light">
