--- a/projecte/Pagina1.html
+++ b/projecte/Pagina1.html
@@ -12,7 +12,7 @@
 
 <body>
     <header class="col col-md-12">
-        <h1>Toyota</h1>
+        <h1>Toyota Trueno</h1>
     </header>
 
     <nav class="navbar navbar-expand-sm bg-light">
