--- a/projecte/Pagina3.html
+++ b/projecte/Pagina3.html
@@ -13,7 +13,7 @@
 
 <body>
     <header class="col col-md-12">
-        <h1>Mazda</h1>
+        <h1>Mazda rx7</h1>
     </header>
 
     <nav class="navbar navbar-expand-sm bg-light">
