--- a/projecte/ProjecteAG.html
+++ b/projecte/ProjecteAG.html
@@ -35,14 +35,13 @@
 
   <div class="row">
     <ul class="col offset-1 col-md-4"></ul>
-    <li class="Maincontent"></li>
   </div>
   </nav>
 
  
   <div class="row">
 
-    <div class="col col-md-6 mx-4">
+    <div class="col -1 col-md-6 mx-4">
       Un automòbil (també se'n pot dir auto, cotxe o votura a la Catalunya Nord) és usualment un vehicle de quatre rodes
       amb motor destinat al transport de persones, amb capacitat entre dos i 7 seients. Es desplaça gràcies a un motor
       d'explosió a cop d'una mescla de gasolina, gasoil i aire. Recentment han començat a produir automòbils que
@@ -67,9 +66,7 @@
     </div>
   </div>
 
-  <footer>
     <div id="footer"></div>
-  </footer>
   
 
 </body>
