--- a/projecte/ProjecteAG.html
+++ b/projecte/ProjecteAG.html
@@ -38,7 +38,7 @@
   </div>
   </nav>
 
- 
+
   <div class="row">
 
     <div class="col -1 col-md-6 mx-4">
@@ -58,6 +58,15 @@
       El motor, elèctric o tèrmic, subministren un parell sobre el seu eix de sortida. Aquest parell ha de ser transmès
       a les rodes per permetre el desplaçament de l'automòbil. Els diferents òrgans de transmissió - l'embragatge, la
       caixa de canvi, els ponts i el diferencial entre d'altres - asseguren aquesta funció.
+      <p></p>
+      La caixa de canvis és l'element mecànic que permet modificar la velocitat d'un cotxe fins i tot si la velocitat de
+      rotació del motor és constant. En el cas del motor d'explosió, permet sobretot adaptar el parell motriu disponible
+      a les necessitats del conductor.[18] La caixa de canvi habitualment es connecta al motor amb l'ajuda d'un
+      embragatge, element que permet aïllar la transmissió del motor. Una caixa de canvi està composta per un conjunt
+      d'engranatges mòbils i fixos sobre eixos, tancats en un càrter estanc i lubrificat per xipolleig o a pressió.
+      Aquest sistema permet modificar la relació de desmultiplicació - relació entre la velocitat de rotació del motor i
+      la de les "rodes motrius" (les provoquen la tracció) - indispensable entre les rodes i el motor, donat que els
+      motors d'explosió no generen pas un parell disponible prou gran a tots els règims de rotació.
     </div>
 
     <div class="col offset-1 col-md-4">
@@ -66,8 +75,8 @@
     </div>
   </div>
 
-    <div id="footer"></div>
-  
+  <div id="footer"></div>
+
 
 </body>
 
