--- a/projecte/ProjecteAG.html
+++ b/projecte/ProjecteAG.html
@@ -11,7 +11,7 @@
   <script src="footer.js" type="text/javascript" defer></script>
 </head>
 
-<body>
+<body class="text">
   <header class="col col-md-12">
     <h1>Cotxes</h1>
   </header>
