--- a/projecte/Pagina1.html
+++ b/projecte/Pagina1.html
@@ -38,7 +38,7 @@
 
     <div class="row">
 
-        <div class="col -1 col-md-6 mx-4">El AE86, junto con el de menor especificación de 1452 cm³ (1,5 L; 88,6 plg³)
+        <div class="col col-md-6 mx-4 mb-4">El AE86, junto con el de menor especificación de 1452 cm³ (1,5 L; 88,6 plg³)
             AE85 y de 1587 cm³ (1,6 L; 96,8 plg³) en versiones SR5, era de tracción trasera, a diferencia de la CE80
             tracción delantera, EE80 y modelos AE82; y es uno de los últimos coches de tracción trasera de su tipo, en
             un momento cuando a la mayoría de los turismos se les cambia a tracción delantera.
