--- a/projecte/Pagina2.html
+++ b/projecte/Pagina2.html
@@ -40,7 +40,7 @@
 
     <div class="row">
         
-        <div class="col -1 col-md-6 mx-4">​
+        <div class="col -1 col-md-6 mx-4 mb-4">​
             Cualquier aficionado de los coches japoneses que se precie conoce el Nissan Skyline GT-R (R34). Se trata de
             una de las generaciones más conocidas de este modelo, así como probablemente de la más codiciada. Sin
             embargo, el ejemplar de las imágenes es aún más especial, ya que tiene el volante a la izquierda. Acaba de
