--- a/projecte/Pagina3.html
+++ b/projecte/Pagina3.html
@@ -39,7 +39,7 @@
 
     <div class="row">
 
-        <div class="col -1 col-md-6 mx-4">​
+        <div class="col -1 col-md-6 mx-4 mb-4">​
             El Mazda RX-7 es un automóvil deportivo producido por el fabricante japonés Mazda Motor Corporation (マツダ株式会社
             Matsuda Kabushiki-gaisha?) entre los años 1978 y 2002. Rivalizaba con otros deportivos asequibles, como el
             Toyota Supra, el Honda NSX, la línea Nissan Fairlady Z y el Nissan Skyline.
