--- a/projecte/Pagina3.html
+++ b/projecte/Pagina3.html
@@ -20,7 +20,7 @@
         <div class="container-fluid">
           <ul class="navbar-nav">
             <li class="nav-item">
-                <a class="nav-link" href="ProjecteAG.html">Home</a>
+                <a class="nav-link" href="Index.html">Home</a>
               </li>
             <li class="nav-item">
               <a class="nav-link" href="Pagina1.html">Toyota</a>
