--- a/projecte/Pagina1.html
+++ b/projecte/Pagina1.html
@@ -19,7 +19,7 @@
         <div class="container-fluid">
           <ul class="navbar-nav">
             <li class="nav-item">
-              <a class="nav-link" href="ProjecteAG.html">Home</a>
+              <a class="nav-link" href="Index.html">Home</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="Pagina2.html">Nissan</a>
