--- a/projecte/Pagina2.html
+++ b/projecte/Pagina2.html
@@ -21,7 +21,7 @@
             <ul class="navbar-nav">
                 <li class="nav-item">
                 <li class="nav-item">
-                    <a class="nav-link" href="ProjecteAG.html">Home</a>
+                    <a class="nav-link" href="Index.html">Home</a>
                 </li>
                 <a class="nav-link" href="Pagina1.html">Toyota</a>
                 </li>
