--- a/projecte/Pagina1.html
+++ b/projecte/Pagina1.html
@@ -74,7 +74,7 @@
         </div>
 
 
-        <div class="col offset-1 col-md-4">
+        <div class="offset-1 col-10 col-md-4 mb-3">
             <img src="https://www.mojehobby.pl/zdjecia/5/0/1/47744_rd.png" class="d-block w-100 align-items-md-center"
                 width="400" height="300" alt="...">
         </div>
