--- a/projecte/Pagina1.html
+++ b/projecte/Pagina1.html
@@ -27,14 +27,17 @@
         <div class="container-fluid">
           <ul class="navbar-nav">
             <li class="nav-item">
-              <a class="nav-link" href="Index.html">Home</a>
+              <a class="nav-link text-black" href="">Toyota</a>
             </li>
+
             <li class="nav-item">
               <a class="nav-link" href="Pagina2.html">Nissan</a>
             </li>
+
             <li class="nav-item">
               <a class="nav-link" href="Pagina3.html">Mazda</a>
             </li>
+            
           </ul>
         </div>
       </nav>
