--- a/projecte/Pagina2.html
+++ b/projecte/Pagina2.html
@@ -28,10 +28,11 @@
         <div class="container-fluid">
             <ul class="navbar-nav">
                 <li class="nav-item">
-                <li class="nav-item">
-                    <a class="nav-link" href="Index.html">Home</a>
-                </li>
                 <a class="nav-link" href="Pagina1.html">Toyota</a>
+                </li>
+
+                <li class="nav-item">
+                    <a class="nav-link text-black" href="">Nissan</a>
                 </li>
 
                 <li class="nav-item">
