--- a/projecte/Pagina3.html
+++ b/projecte/Pagina3.html
@@ -28,13 +28,13 @@
         <div class="container-fluid">
           <ul class="navbar-nav">
             <li class="nav-item">
-                <a class="nav-link" href="Index.html">Home</a>
-              </li>
-            <li class="nav-item">
               <a class="nav-link" href="Pagina1.html">Toyota</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="Pagina2.html">Nissan</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link text-black" href="">Mazda</a>
             </li>
           </ul>
         </div>
