--- a/projecte/Index.html
+++ b/projecte/Index.html
@@ -6,9 +6,9 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <script src=".\node_modules\bootstrap\dist\js\bootstrap.bundle.min.js"></script>
-  <link rel="stylesheet" href="ProjecteAGcss.css" type="text/css">
-  <link rel="stylesheet" href="ProjecteAG.css" type="text/css">
-  <script src="footer.js" type="text/javascript" defer></script>
+  <link rel="stylesheet" href="../projecte/css/ProjecteAGcss.css" type="text/css">
+  <link rel="stylesheet" href="../projecte/css/ProjecteAG.css" type="text/css">
+  <script src="js/footer.js" type="text/javascript" defer></script>
 </head>
 
 <body class="text">
@@ -21,13 +21,13 @@
     <div class="container-fluid">
       <ul class="navbar-nav">
         <li class="nav-item">
-          <a class="nav-link" href="Pagina1.html">Toyota</a>
+          <a class="nav-link" href="html/Pagina1.html">Toyota</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="Pagina2.html">Nissan</a>
+          <a class="nav-link" href="html/Pagina2.html">Nissan</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="Pagina3.html">Mazda</a>
+          <a class="nav-link" href="html/Pagina3.html">Mazda</a>
         </li>
       </ul>
     </div>
