--- a/projecte/Pagina1.html
+++ b/projecte/Pagina1.html
@@ -5,9 +5,9 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <script src=".\node_modules\bootstrap\dist\js\bootstrap.bundle.min.js"></script>
-  <link rel="stylesheet" href="ProjecteAGcss.css" type="text/css">
-  <link rel="stylesheet" href="ProjecteAG.css" type="text/css">
-  <script src="footer.js" type="text/javascript" defer></script>
+  <link rel="stylesheet" href="../projecte/css/ProjecteAGcss.css" type="text/css">
+    <link rel="stylesheet" href="../projecte/css/ProjecteAG.css" type="text/css">
+    <script src="../projecte/js/footer.js" type="text/javascript" defer></script>
 </head>
 
 <body>
