--- a/projecte/html/Pagina1.html
+++ b/projecte/html/Pagina1.html
@@ -5,9 +5,9 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <script src=".\node_modules\bootstrap\dist\js\bootstrap.bundle.min.js"></script>
-  <link rel="stylesheet" href="ProjecteAGcss.css" type="text/css">
-  <link rel="stylesheet" href="ProjecteAG.css" type="text/css">
-  <script src="footer.js" type="text/javascript" defer></script>
+  <link rel="stylesheet" href="../projecte/css/ProjecteAGcss.css" type="text/css">
+    <link rel="stylesheet" href="../projecte/css/ProjecteAG.css" type="text/css">
+    <script src="../projecte/js/footer.js" type="text/javascript" defer></script>
 </head>
 
 <body>
@@ -15,7 +15,7 @@
     <h1>Toyota Trueno</h1>
     <ul class="list-inline">
       <li>
-        <a target="_blank" href="Index.html" class="btn-social btn-outline"> <svg xmlns="http://www.w3.org/2000/svg"
+        <a target="_blank" href="../projecte/Index.html" class="btn-social btn-outline"> <svg xmlns="http://www.w3.org/2000/svg"
             width="16" height="16" fill="currentColor" class="bi bi-reply-all-fill" viewBox="0 0 16 16">
             <path
               d="M8.021 11.9 3.453 8.62a.719.719 0 0 1 0-1.238L8.021 4.1a.716.716 0 0 1 1.079.619V6c1.5 0 6 0 7 8-2.5-4.5-7-4-7-4v1.281c0 .56-.606.898-1.079.62z" />
@@ -30,7 +30,7 @@
     <div class="container-fluid">
       <ul class="navbar-nav">
         <li class="nav-item">
-          <a class="nav-link text-black" href="">Toyota</a>
+          <a class="nav-link text-black" href="Pagina1.html">Toyota</a>
         </li>
 
         <li class="nav-item">
