--- a/projecte/html/Pagina2.html
+++ b/projecte/html/Pagina2.html
@@ -4,10 +4,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script src=".\node_modules\bootstrap\dist\js\bootstrap.bundle.min.js"></script>
-    <link rel="stylesheet" href="../projecte/css/ProjecteAGcss.css" type="text/css">
-    <link rel="stylesheet" href="../projecte/css/ProjecteAG.css" type="text/css">
-    <script src="../projecte/js/footer.js" type="text/javascript" defer></script>
+    <script src="..\node_modules\bootstrap\dist\js\bootstrap.bundle.min.js"></script>
+    <link rel="stylesheet" href="../css/ProjecteAGcss.css" type="text/css">
+      <link rel="stylesheet" href="../css/ProjecteAG.css" type="text/css">
+      <script src="../js/footer.js" type="text/javascript" defer></script>
 </head>
 
 <body>
@@ -16,7 +16,7 @@
         <h1>Nissan Skyline r34</h1>
         <ul class="list-inline">
             <li>
-                <a target="_blank" href="../projecte/Index.html" class="btn-social btn-outline"> <svg width="16" height="16" fill="currentColor" class="bi bi-reply-all-fill" viewBox="0 0 16 16">
+                <a target="_blank" href="../Index.html" class="btn-social btn-outline"> <svg width="16" height="16" fill="currentColor" class="bi bi-reply-all-fill" viewBox="0 0 16 16">
                   <path d="M8.021 11.9 3.453 8.62a.719.719 0 0 1 0-1.238L8.021 4.1a.716.716 0 0 1 1.079.619V6c1.5 0 6 0 7 8-2.5-4.5-7-4-7-4v1.281c0 .56-.606.898-1.079.62z"/>
                   <path d="M5.232 4.293a.5.5 0 0 1-.106.7L1.114 7.945a.5.5 0 0 1-.042.028.147.147 0 0 0 0 .252.503.503 0 0 1 .042.028l4.012 2.954a.5.5 0 1 1-.593.805L.539 9.073a1.147 1.147 0 0 1 0-1.946l3.994-2.94a.5.5 0 0 1 .699.106z"/>
                 </svg></a>
