--- a/html/Pagina2.html
+++ b/html/Pagina2.html
@@ -4,10 +4,10 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <script src="..\..\node_modules\bootstrap\dist\js\bootstrap.bundle.min.js"></script>
-  <link rel="stylesheet" href="../../css/ProjecteAGcss.css" type="text/css">
-  <link rel="stylesheet" href="../../css/ProjecteAG.css" type="text/css">
-  <script src="../../js/footer.js" type="text/javascript" defer></script>
+  <script src="..\node_modules\bootstrap\dist\js\bootstrap.bundle.min.js"></script>
+  <link rel="stylesheet" href="../css/ProjecteAGcss.css" type="text/css">
+  <link rel="stylesheet" href="../css/ProjecteAG.css" type="text/css">
+  <script src="../js/footer.js" type="text/javascript" defer></script>
 </head>
 
 <body>
