--- a/html/Pagina2.html
+++ b/html/Pagina2.html
@@ -1,6 +1,7 @@
 <html>
 
 <head>
+  <title>Nissan Skyline r34</title>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -8,6 +9,7 @@
   <link rel="stylesheet" href="../css/ProjecteAGcss.css" type="text/css">
   <link rel="stylesheet" href="../css/ProjecteAG.css" type="text/css">
   <script src="../js/footer.js" type="text/javascript" defer></script>
+  <link rel="shortcut icon" href="https://img.remediosdigitales.com/50967d/captura-de-pantalla-2022-08-26-a-las-17.38.32/1366_2000.jpeg">
 </head>
 
 <body>
