--- a/html/Pagina1.html
+++ b/html/Pagina1.html
@@ -1,7 +1,7 @@
 <html>
 
 <head>
-  <title>Toyota Trueno</title>
+  <title>Rebeldes</title>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -14,7 +14,7 @@
 
 <body>
   <header class="col col-md-12">
-    <h1>Toyota Trueno</h1>
+    <h1>Rebeldes</h1>
     <ul class="list-inline">
       <li>
         <a target="_blank" href="../Index.html" class="btn-social btn-outline"> <svg xmlns="http://www.w3.org/2000/svg"
@@ -32,15 +32,15 @@
     <div class="container-fluid">
       <ul class="navbar-nav">
         <li class="nav-item">
-          <a class="nav-link text-black" href="Pagina1.html">Toyota</a>
+          <a class="nav-link text-black" href="Pagina1.html">Rebeldes</a>
         </li>
 
         <li class="nav-item">
-          <a class="nav-link" href="Pagina2.html">Nissan</a>
+          <a class="nav-link" href="Pagina2.html">Imperio</a>
         </li>
 
         <li class="nav-item">
-          <a class="nav-link" href="Pagina3.html">Mazda</a>
+          <a class="nav-link" href="Pagina3.html">Jedis</a>
         </li>
 
       </ul>
@@ -54,39 +54,24 @@
 
   <div class="row">
 
-    <div class="col col-md-6 mx-4 mb-4">El AE86, junto con el de menor especificación de 1452 cm³ (1,5 L; 88,6 plg³)
-      AE85 y de 1587 cm³ (1,6 L; 96,8 plg³) en versiones SR5, era de tracción trasera, a diferencia de la CE80
-      tracción delantera, EE80 y modelos AE82; y es uno de los últimos coches de tracción trasera de su tipo, en
-      un momento cuando a la mayoría de los turismos se les cambia a tracción delantera.
-
-      En Japón, el AE86 también era conocido como el Hachi-Roku (八 六), ("ocho-seis" en japonés), que venía
-      equipado con un motor 4A-GE Redtop. El Sprinter Trueno era exclusivo de los concesionarios de Toyota
-      llamados Toyota Vista Store, mientras que el Corolla Levin era exclusivo de Toyota Corolla Store. El nombre
-      proviene de la palabra española "Trueno" y "Levin" del inglés medio para "relámpago". El motor DOHC 4A-GEU
-      "AE86" se ofreció en el modelo GT, GT-APEX y GTV como el Corolla Levin o Sprinter Trueno; mientras que el
-      motor SOHC 3A-U "AE85" fue incluido en el modelo SR como Corolla Levin o Sprinter Trueno. En Norteamérica,
-      la gama superior DOHC 4A-GEC se vendió como Corolla GT-S AE86 con faros escamoteables. Debido a un ligero
-      peso de alrededor de 940 kg (2072 lb) y más de 120 CV (118 HP; 88 kW) de potencia, el coche podría alcanzar
-      una velocidad máxima de 196 km/h (122 mph) y podía acelerar de 0-100 km/h (62 mph) en 8,3 segundos en las
-      especificaciones estándar
-
-      <p></p>
-      <p></p>
-      En 1984, se introduce el motor 4A-GE como sustituto para el 2T-G, este último tenía fama de motor duro y
-      robusto; al principio mucha gente desconfiaba del nuevo 4A-GE por su aspecto frágil, con un peso en seco de
-      123 kg (271 lb). Con 4 válvulas por cilindro (16 en total), Toyota tuvo que tener cuidado en sus métodos de
-      construcción, ya que esta configuración no le permitía obtener un bloque que fuera “visualmente” más
-      robusto, esto es porque la cabeza tenía que dejar paso a 2 válvulas extra por cilindro y el motor en general
-      necesitaba permitir revoluciones altas.
-
-      Este motor de cuatro cilindros en línea y 1587 cm³ (1,6 L; 96,8 plg³) con un diámetro x carrera de 81 x
-      77 mm (3,19 x 3,03 pulgadas) y lubricación por cárter húmedo,2​ también fue utilizado en la primera
-      generación del Toyota MR2 (AW11). Rendía 120 CV (118 HP; 88 kW) y 14,3 kg·m (140 N·m; 103 lb·pie) de par
-      máximo. También fue equipado con el T-VIS, un sistema de distribución de válvulas variable de Toyota.
-
-      En Norteamérica se utilizó un motor modificado 4A-GEC para cumplir las regulaciones de emisiones de
-      California, por lo que tenía un rendimiento menor de 112 CV (110 HP; 82 kW) y 13,9 kg·m (136 N·m) de par
-      máximo.3​
+    <div class="col col-md-6 mx-4 mb-4">
+      Poco antes de la creación del Imperio Galáctico, los senadores Mon Mothma, Bail Organa y Padmé Amidala, junto a
+      otros senadores, presentaron la Petición de los 2000 a Palpatine para que este devolviera sus poderes especiales
+      una vez acabaran las Guerras Clon. Sin embargo, el Canciller ahora procamado como el Emperador no los escuchó, más
+      bien a aquellos que no se sometían al mandato del Emperador eran considerados traidores al Imperio y encarcelados
+      o ejecutados.
+      <br><br>
+      Múltiples planetas apoyaron fervientemente a la Alianza y la asistieron durante muchos años con todo tipo de
+      requerimientos, pues compartían el mismo odio por la tiranía imperial. La Guerra Civil no fue nada bien para la
+      Rebelión, aunque todo cambió en el momento en que un escuadrón rebelde llamado Rogue One robó los planos de la
+      Estrella de la Muerte. Finalmente, la situación cambió cuando el joven granjero de Tatooine (Luke Skywalker) y sus
+      dos amigos contrabandistas (Han Solo y Chewbacca) ingresaron en la Alianza rebelde, dándole un gran giro. Durante
+      la Batalla de Yavin, Luke consiguió destruir la poderosa arma imperial, matando además a uno de los grandes
+      líderes, el Gran Moff Wilhuff Tarkin que muere en la explosión al no escapar de la Estrella de la Muerte.
+      <br><br>
+      Los Líderes de la Alianza Rebelde por lo general eran bastante aguerridos y expertos militares o diplomáticos. Tal
+      es el caso de Mon Mothma o la princesa Leia Organa, dos senadoras. O del General Jan Dodonna, General Crix Madine,
+      Carlist Rieekan y otros.
     </div>
 
 
