star wars dia 13

--- a/html/Pagina3.html
+++ b/html/Pagina3.html
@@ -9,7 +9,6 @@
   <link rel="stylesheet" href="../css/ProjecteAGcss.css" type="text/css">
   <link rel="stylesheet" href="../css/ProjecteAG.css" type="text/css">
   <script src="../js/footer.js" type="text/javascript" defer></script>
-  <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
   <script src="../js/pagina3.js" type="text/javascript" defer></script>  
   <link rel="shortcut icon"
     href="https://hips.hearstapps.com/hmg-prod.s3.amazonaws.com/images/luke-skywalker-1560514826.jpg?crop=0.666xw:1.00xh;0,0&resize=640:*">
@@ -58,13 +57,13 @@
       <form id="search-form">
         <label>Altura:</label>
         <input type="text" name="height"><br>
-        <label>Peso:</label>
+        <label>Pes:</label>
         <input type="text" name="mass"><br>
-        <label>Color de cabello:</label>
+        <label>Color de cabell:</label>
         <input type="text" name="hair_color"><br>
-        <label>Color de piel:</label>
+        <label>Color de pell:</label>
         <input type="text" name="skin_color"><br>
-        <label>Color de ojos:</label>
+        <label>Color d'ulls':</label>
         <input type="text" name="eye_color"><br>
         <input id="buscar" type="submit" value="Buscar">
       </form>
