--- a/html/Pagina3.html
+++ b/html/Pagina3.html
@@ -11,7 +11,7 @@
   <script src="../js/footer.js" type="text/javascript" defer></script>
   <script src="../js/pagina3.js" type="text/javascript" defer></script>  
   <link rel="shortcut icon"
-    href="https://hips.hearstapps.com/hmg-prod.s3.amazonaws.com/images/luke-skywalker-1560514826.jpg?crop=0.666xw:1.00xh;0,0&resize=640:*">
+    href="https://yt3.googleusercontent.com/ytc/AGIKgqM_6K_Hn5dH7OP346MxNZMKuHhX3_zMRyZkxGKzmA=s900-c-k-c0x00ffffff-no-rj">
 </head>
 
 <body>
@@ -34,13 +34,13 @@
     <div class="container-fluid">
       <ul class="navbar-nav">
         <li class="nav-item">
-          <a class="nav-link" href="Pagina1.html">Rebelde</a>
+          <a class="nav-link" href="Pagina1.html">Veure Personatges</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="Pagina2.html">Imperio</a>
+          <a class="nav-link" href="Pagina2.html">Gràfic planetes</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link text-black" href="Pagina3.html">Jedis</a>
+          <a class="nav-link text-black" href="Pagina3.html">Buscar Personatge</a>
         </li>
       </ul>
     </div>
