--- a/Index.html
+++ b/Index.html
@@ -11,7 +11,7 @@
   <link rel="stylesheet" href="css/ProjecteAG.css" type="text/css">
   <script src="js/footer.js" type="text/javascript" defer></script>
   <link rel="shortcut icon"
-    href="https://upload.wikimedia.org/wikipedia/commons/thumb/2/2a/Rebel_Alliance_logo.svg/1200px-Rebel_Alliance_logo.svg.png">
+    href="https://yt3.googleusercontent.com/ytc/AGIKgqM_6K_Hn5dH7OP346MxNZMKuHhX3_zMRyZkxGKzmA=s900-c-k-c0x00ffffff-no-rj">
 </head>
 
 <body class="text">
@@ -27,10 +27,10 @@
           <a class="nav-link" href="html/Pagina1.html">Veure Personatges</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="html/Pagina2.html">Imperio</a>
+          <a class="nav-link" href="html/Pagina2.html">Gràfic planetes</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="html/Pagina3.html">Jedis</a>
+          <a class="nav-link" href="html/Pagina3.html">Buscar Personatge</a>
         </li>
       </ul>
     </div>
