--- a/html/Pagina1.html
+++ b/html/Pagina1.html
@@ -63,12 +63,12 @@
     <div class="col col-md-6 mx-4 mb-4">
       <p>Digues de quina pelicula vols veure els personatges</p>
       <select id="selectPeli">
-        <option value="4">1</option>
-        <option value="5">2</option>
-        <option value="6">3</option>
-        <option value="1">4</option>
-        <option value="2">5</option>
-        <option value="3">6</option>
+        <option value="4">La amenaza fantasma</option>
+        <option value="5">El ataque de los clones</option>
+        <option value="6">La venganza de los sith</option>
+        <option value="1">Una nueva esperanza</option>
+        <option value="2">El imperio contraataca</option>
+        <option value="3">El retorno del jedi</option>
       </select>
 
       <div id="personatges">
