--- a/html/Pagina1.html
+++ b/html/Pagina1.html
@@ -49,6 +49,9 @@
           <a class="nav-link" href="Pagina3.html">Buscar Personatge</a>
         </li>
 
+        <li class="nav-item">
+            <a class="nav-link" href="Pagina4.html">Mostrar Naus</a>
+          </li>
       </ul>
     </div>
   </nav>
