--- a/html/Pagina3.html
+++ b/html/Pagina3.html
@@ -36,12 +36,18 @@
         <li class="nav-item">
           <a class="nav-link" href="Pagina1.html">Veure Personatges</a>
         </li>
+
         <li class="nav-item">
           <a class="nav-link" href="Pagina2.html">Gràfic planetes</a>
         </li>
+
         <li class="nav-item">
           <a class="nav-link text-black" href="Pagina3.html">Buscar Personatge</a>
         </li>
+
+        <li class="nav-item">
+            <a class="nav-link" href="Pagina4.html">Mostrar Naus</a>
+          </li>
       </ul>
     </div>
   </nav>
