--- a/Index.html
+++ b/Index.html
@@ -32,6 +32,9 @@
         <li class="nav-item">
           <a class="nav-link" href="html/Pagina3.html">Buscar Personatge</a>
         </li>
+        <li class="nav-item">
+          <a class="nav-link" href="html/Pagina4.html">Buscar Personatge</a>
+        </li>
       </ul>
     </div>
   </nav>
@@ -62,9 +65,33 @@
       hizo que Lucas financiara dos secuelas más, Star Wars: Episodio V - El Imperio contraataca (1980) y Star Wars:
       Episode VI - Return of the Jedi (1983), que completaron la denominada «trilogía original» y a las que se
       incorporaron actores como Billy Dee Williams, Frank Oz e Ian McDiarmid.13​
+      <br><br>
+      La trama descrita en las nueve películas que componen la serie principal de Star Wars relata las vivencias de la
+      familia Skywalker,17​ «hace mucho tiempo en una galaxia muy muy lejana»,18​ cuyos integrantes son capaces de
+      percibir y utilizar «La Fuerza», lo cual les permite desarrollar habilidades como la telequinesis, la
+      clarividencia y el control mental, entre otras.
+      Un par de sables de luz cruzados entre sí; un sable de luz es el arma principal utilizada por los Jedi y sus
+      enemigos, los Sith, y consiste en una empuñadura de metal pulido que lleva un cristal que proyecta una hoja de
+      energía de aproximadamente un metro de longitud.
+
+      En la «trilogía de precuelas» se describe el entrenamiento del joven Anakin Skywalker, bajo la tutela del maestro
+      Jedi Obi-Wan Kenobi, durante una época de inestabilidad política derivada de una disputa entre la República
+      Galáctica y la Federación de Comercio. El ataque por parte de un ejército de droides motiva al Senado Galáctico a
+      conceder poderes extraordinarios al canciller Palpatine, que mantiene en secreto su identidad como el Sith Darth
+      Sidious con el objetivo de incitar las Guerras Clon, derrocar el sistema republicano y fundar el Imperio Galáctico
+      bajo su mando. Sus planes se ven facilitados cuando descubre que Anakin manifiesta debilidad por el «lado oscuro
+      de la Fuerza», debido a sus sentimientos de ira, miedo y odio, reforzados por el asesinato de su madre, la
+      desconfianza de la orden Jedi en sus capacidades y las visiones de su esposa Padmé muriendo durante el parto.
+      Finalmente, Anakin se convierte en el aprendiz de Sidious, bajo el nombre de Darth Vader, y le ayuda a poner en
+      marcha la Orden 66, una directriz que conduce a la exterminio de los Jedi. Tras un enfrentamiento con Obi-Wan en
+      el que Anakin resulta severamente herido, este último adopta un traje robótico negro gracias al cual puede
+      mantenerse con vida.
       <br>
     </div>
   </div>
+
+
+
 
   <div id="footer"></div>
 
