--- a/html/Pagina2.html
+++ b/html/Pagina2.html
@@ -36,7 +36,7 @@
     <div class="container-fluid">
       <ul class="navbar-nav">
         <li class="nav-item">
-          <a class="nav-link" href="Pagina1.html">Veure Personatges</a>
+          <a class="nav-link " href="Pagina1.html">Veure Personatges</a>
         </li>
 
         <li class="nav-item">
@@ -46,6 +46,10 @@
         <li class="nav-item">
           <a class="nav-link" href="Pagina3.html">Buscar Personatge</a>
         </li>
+
+        <li class="nav-item">
+            <a class="nav-link" href="Pagina4.html">Mostrar Naus</a>
+          </li>
       </ul>
     </div>
   </nav>
