--- a/Index.html
+++ b/Index.html
@@ -33,7 +33,10 @@
           <a class="nav-link" href="html/Pagina3.html">Buscar Personatge</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="html/Pagina4.html">Buscar Personatge</a>
+          <a class="nav-link" href="html/Pagina4.html">Mostrar Naus</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="html/Pagina5.html">Llistar personatges per especie</a>
         </li>
       </ul>
     </div>
