--- a/html/Pagina1.html
+++ b/html/Pagina1.html
@@ -6,7 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-  <script src="..\node_modules\bootstrap\dist\js\bootstrap.bundle.min.js"></script> 
+  <script src="..\node_modules\bootstrap\dist\js\bootstrap.bundle.min.js"></script>
   <link rel="stylesheet" href="../css/ProjecteAGcss.css" type="text/css">
   <link rel="stylesheet" href="../css/ProjecteAG.css" type="text/css">
   <script src="../js/footer.js" type="text/javascript" defer></script>
@@ -15,7 +15,8 @@
   <script src="../js/projecte.js" type="module" defer></script>
   <link rel="shortcut icon"
     href="https://yt3.googleusercontent.com/ytc/AGIKgqM_6K_Hn5dH7OP346MxNZMKuHhX3_zMRyZkxGKzmA=s900-c-k-c0x00ffffff-no-rj">
-  <script src="https://cdn.jsdelivr.net/npm/chart.js"></script> <!--Cridem el chart, es una biblioteca per crear gràfics interactius per a una pagina web-->
+  <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+  <!--Cridem el chart, es una biblioteca per crear gràfics interactius per a una pagina web-->
 </head>
 
 <body>
@@ -50,8 +51,11 @@
         </li>
 
         <li class="nav-item">
-            <a class="nav-link" href="Pagina4.html">Mostrar Naus</a>
-          </li>
+          <a class="nav-link" href="Pagina4.html">Mostrar Naus</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="Pagina5.html">Llistar personatges per especie</a>
+        </li>
       </ul>
     </div>
   </nav>
@@ -79,8 +83,7 @@
       </div>
 
     </div>
-    <img class="offset-1 col-10 col-md-4 mb-3"
-    id="imatge"></img>
+    <img class="offset-1 col-10 col-md-4 mb-3" id="imatge"></img>
   </div>
 
   <div id="footer"></div>
