--- a/html/Pagina2.html
+++ b/html/Pagina2.html
@@ -48,8 +48,11 @@
         </li>
 
         <li class="nav-item">
-            <a class="nav-link" href="Pagina4.html">Mostrar Naus</a>
-          </li>
+          <a class="nav-link" href="Pagina4.html">Mostrar Naus</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="Pagina5.html">Llistar personatges per especie</a>
+        </li>
       </ul>
     </div>
   </nav>
@@ -63,7 +66,7 @@
     <div id="chart-container">
       <canvas id="chart"></canvas>
     </div>
-  <div id="footer"></div>
+    <div id="footer"></div>
 </body>
 
 </html>
