--- a/html/Pagina4.html
+++ b/html/Pagina4.html
@@ -60,8 +60,10 @@
     <div class="container">
         <div class="row">
             <div class="col-3" id="naus">
+                Naus:<br>
             </div>
             <div class="col-9" id="contingut">
+                Informació:<br>
             </div>
         </div>
 
