--- a/html/Pagina5.html
+++ b/html/Pagina5.html
@@ -67,7 +67,7 @@
                 </div>
             </div>
             <div class="col-md-6">
-                <button type="button" class="btn btn-primary" id="submitButton">Enviar</button>
+                <button type="button" class="btn btn-primary" id="submitButton">Buscar</button>
             </div>
         </div>
     </div>
